# palantir

./: .env.example  .gitignore  README.md  pyproject.toml
src/palantir/: __main__.py  bot.py  config.py  dashboard.py  main.py  pipeline.py  report.py
src/palantir/models/: post.py
src/palantir/services/: ai_service.py  db_service.py  dedup_service.py  notification_service.py  scraper_service.py
